# mytv-mobile

./: HISTORY.md  Makefile-speedtest.mk  app.build.gradle  build.gradle
.github/workflows/: build-apk.yml  build-speedtest.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/mytv/: BootReceiver.kt  ConfirmationFragment.kt  Ext.kt  FullscreenActivity.kt  InitializerProvider.kt  ItemDecoration.kt  MainActivity.kt  MyTVApplication.kt  NetworkChangeReceiver.kt  OnSharedPreferenceChangeListener.kt  SP.kt  SettingsBottomSheet.kt  SettingsDialogFragment.kt  SpeedtestDialogFragment.kt  SpeedtestForegroundService.kt  UpdateManager.kt  UpdateWorker.kt  Utils.kt
app/src/main/java/com/github/mytv/api/: ApiClient.kt  TimeResponse.kt
app/src/main/java/com/github/mytv/models/: EPG.kt  MyViewModel.kt  ProgramType.kt  TV.kt  TVList.kt  (+2 more)
app/src/main/res/drawable/: bg_card.xml  bg_card_elevated.xml  bg_group_selected.xml  bg_pill_button.xml  ic_fullscreen.xml  ic_fullscreen_exit.xml  ic_pause.xml  ic_play.xml  ic_refresh.xml  ic_settings.xml
app/src/main/res/layout/: activity_fullscreen.xml  activity_main.xml  dialog_settings.xml  dialog_speedtest.xml  item_channel.xml  item_group.xml
app/src/main/res/layout-sw600dp/: activity_main.xml  dialog_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iptv-speedtest/: Cargo.toml
iptv-speedtest/src/: channel.rs  config.rs  main.rs  output.rs  server.rs  speedtest.rs  subscribe.rs  task.rs  types.rs
(+6 files in other folders)
