[package]
name    = "iptv_speedtest"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_json   = "1"
clap         = { version = "4",    features = ["derive"] }
regex        = "1"
url          = "2"
once_cell    = "1"
chrono       = { version = "0.4",  features = ["clock"] }
anyhow       = "1"
futures-util = "0.3"

# android feature 为空占位，仅供 CI/Makefile 传 --features android 时不报错
[features]
android = []

[profile.release]
strip         = "symbols"
debug         = false
lto           = "thin"
codegen-units = 1

[profile.release-android]
inherits = "release"
lto      = "fat"
panic    = "abort"
